@@ -5,7 +5,7 @@
  * Any other distribution or use of this source violates copyright.
 */
 #ifndef __BASEINCS_H__
-#define __BASEINCS_H__ "@(#)$Id: baseincs.h,v 1.85.2.17 2004/08/14 23:31:59 kakace Exp $"
+#define __BASEINCS_H__ "@(#)$Id: baseincs.h,v 1.85.2.18 2004/10/13 20:28:38 jbgill Exp $"
 
 #include "cputypes.h"
 
@@ -172,6 +172,12 @@
   #include <fcntl.h> //O_... constants
   #include <netinet/in.h> //ntohl/htonl/ntohs/htons
   #include "plat/netware/netware.h" //for stuff in netware.cpp
+#elif (CLIENT_OS == OS_NETWARE6)
+  #include <sys/time.h>
+  #include <sys/file.h>
+  #include <unistd.h>
+  #include <fcntl.h>
+  #include <sys/byteorder.h>
 #elif (CLIENT_OS == OS_SUNOS)
   #include <fcntl.h>
   #include <unistd.h>
