@@ -21,7 +21,7 @@ Version bump guide:
   `------------- Denotes a client rewrite.
 
 ==========================================================================
-Version change log: $Id: CHANGES.txt,v 1.14.2.84 2004/08/28 20:19:11 oliver Exp $
+Version change log: $Id: CHANGES.txt,v 1.14.2.85 2004/10/13 20:28:38 jbgill Exp $
 ==========================================================================
 
 2.9000
@@ -33,6 +33,7 @@ Version change log: $Id: CHANGES.txt,v 1.14.2.84 2004/08/28 20:19:11 oliver Exp 
             fix: x86: ogr core preselection for Pentium 4 & M (#3742, #3744)
             imp: x86: Pentium/Celeron M & Pentium 4 Prescott detection (#3745)
             new: amigaos: AltiVec cores enabled for OS4
+			new: netware: New port for Netware LibC (Netware 5.1 and up)
 
 2.9008-493  new: ppc: Enabled KOGE cores for all PPC targets, except AIX
             new: macosx: ASM-optimized GARSP-5 cores (KOGE Scalar/Hybrid)
